fix: scrollbars on <pre>

--- a/styles/mode.css
+++ b/styles/mode.css
@@ -2,7 +2,7 @@
     --bg: #fff;
     --text: #000;
     --text-dim: #888;
-    --border: #0001;
+    --border: #0003;
     --navbar: hsla(0,0%,100%,.85);
 
     --font-sans: Inter, ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Noto Sans, Ubuntu, Cantarell, Helvetica Neue, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji;
@@ -14,7 +14,7 @@
         --bg: #131414;
         --text: #fff;
         --text-dim: #444;
-        --border: #fff1;
+        --border: #fff2;
         --navbar: hsla(0,0%,7%,.8);
     }
 }
@@ -23,7 +23,7 @@
     --bg: #131414;
     --text: #fff;
     --text-dim: #444;
-    --border: #fff1;
+    --border: #fff2;
     --navbar: hsla(0,0%,7%,.8);
 }
 
@@ -32,7 +32,7 @@
         --bg: #fff;
         --text: #000;
         --text-dim: #888;
-        --border: #0001;
+        --border: #0003;
         --navbar: hsla(0,0%,100%,.85);
     }
 
