--- a/styles/post.css
+++ b/styles/post.css
@@ -100,7 +100,7 @@ body {
     border-radius: 12px;
     max-width: calc(100vw - 104px);
 
-    overflow: scroll;
+    overflow: auto;
 }
 
 .post article code {
